<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_back"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:text="@string/app_name"
            android:textColor="#ff333333"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/Continue_btn"
            android:layout_below="@+id/intro"
            android:layout_marginTop="34dp"
            android:background="@drawable/button_back"
            android:padding="20dp"
            android:text="@string/play"
            android:onClick="Play"
            android:textColor="#ffcccccc"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/about_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/play_btn"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_back"
            android:padding="20dp"
            android:text="About"
            android:onClick="about"
            android:textColor="#ffcccccc"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Continue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_btn"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_back"
            android:padding="20dp"
            android:text="continue"
            android:onClick="Continue"
            android:textColor="#ffcccccc"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Continue_btn"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_back"
            android:padding="20dp"
            android:text="Exit"
            android:onClick="Exit"
            android:textColor="#ffcccccc"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/Exit_btn"
            android:gravity="center">

            <TextView
                android:id="@+id/lblHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:text="@string/lblHint"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_btn"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:background="@drawable/button_back"
                android:padding="20dp"
                android:text="Yes"
                android:onClick="Yes"
                android:textColor="#ffcccccc"
                android:textSize="20sp"
                android:textStyle="bold" />



        </LinearLayout>

    </RelativeLayout>

</ScrollView>