<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_back"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Question"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:gravity="center|right"
            android:padding="5dp"
            android:text="@string/question"
            android:textColor="#ff333333"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:gravity="center|right"
            android:padding="5dp"
            android:text="@string/answer"
            android:textColor="#ff333333"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/answervalue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:gravity="center"
            android:padding="5dp"
            android:text="GoodLuck!"
            android:textColor="#ff333333"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timertext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:gravity="center|right"
            android:padding="5dp"
            android:text="Time Remaining: "
            android:textColor="#ff333333"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:gravity="center|right"
            android:padding="5dp"
            android:text="0"
            android:textColor="#ff333333"
            android:textSize="30sp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:onClick="keypad7"
            android:padding="5dp"
            android:tag="7"
            android:text="7"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:onClick="keypad8"
            android:padding="5dp"
            android:tag="8"
            android:text="8"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:onClick="keypad9"
            android:padding="5dp"
            android:tag="9"
            android:text="9"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:onClick="keypad4"
            android:padding="5dp"
            android:tag="4"
            android:text="4"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:onClick="keypad5"
            android:padding="5dp"
            android:tag="5"
            android:text="5"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:onClick="keypad6"
            android:padding="5dp"
            android:tag="6"
            android:text="6"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:onClick="keypad1"
            android:padding="5dp"
            android:tag="1"
            android:text="1"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:onClick="keypad2"
            android:padding="5dp"
            android:tag="2"
            android:text="2"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:onClick="keypad3"
            android:padding="5dp"
            android:tag="3"
            android:text="3"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:onClick="keypaddelete"
            android:padding="5dp"
            android:tag="0"

            android:text="DEL"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:onClick="keypad0"
            android:padding="5dp"
            android:text="0"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/hash"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:padding="5dp"
            android:text="#"
            android:onClick="hash"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:padding="5dp"
            android:text="-"
            android:onClick="keypadminus"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/back"
            android:onClick="keypadback"
            android:textColor="#ffcccccc"
            android:textSize="20sp"
             />

    </LinearLayout>
</LinearLayout>